--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>Header styling</title>
+  <head>
+    <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="styles/2-common.css">
     <link rel="stylesheet" type="text/css" href="styles/2-header.css">
     <link rel="stylesheet" type="text/css" href="styles/2-footer.css">
-</head>
-<body>
-    <header></header>
-
+    <title>Airbnb</title>
+  </head>
+  <body>
+    <header>
+    </header>
     <footer>
-        <span>Best School</span>
+      Best School
     </footer>
-</body>
+  </body>
 </html>
