--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>cssstyle</title>
+  <head>
+    <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="styles/3-common.css">
     <link rel="stylesheet" type="text/css" href="styles/3-header.css">
     <link rel="stylesheet" type="text/css" href="styles/3-footer.css">
-    <link rel="icon" type="image/png" href="images/icon.png">
-</head>
-
-<body>
+    <link rel="icon" type="image/png" href="./images/icon.png">
+    <title>Airbnb</title>
+  </head>
+  <body>
     <header>
-        <div class="logo">
-        </div>
     </header>
     <footer>
-        Best school
+      Best School
     </footer>
-</body>
+  </body>
 </html>
